# -drf_wars_of_the_ancient_world

./: .gitignore  Dockerfile  READMY.md  db.sqlite3  db.sqlite3.back  docker-compose.yml  pyproject.toml  setup.cfg
dataset/: data_import_clean_script.py  migration_population.csv
main_app/: settings.py  urls.py
main_app/apps/pop_migrations/: apps.py  models.py  urls.py
main_app/apps/pop_migrations/api/serializers/: pop_migrations.py
main_app/apps/pop_migrations/api/views/: pop_migrations.py
main_app/apps/pop_migrations/migrations/: 0001_initial.py
main_app/apps/users/: admin.py  apps.py  models.py  urls.py
main_app/apps/users/api/serializers/: user.py
main_app/apps/users/api/views/: user.py
main_app/apps/users/migrations/: 0001_initial.py  0002_alter_user_patronymic.py
main_app/project_settings/: base.py  database.py  installed_apps.py  staticfiles.py
tests/: conftest.py
tests/factory/: users.py
tests/users/api/: test_login.py  test_profile.py  test_registration.py  test_update_profile.py
